fixed gap between list items

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -22,7 +22,7 @@ ul {
   list-style-type: none;
   display: flex;
   padding: 10px;
-  align-items: flex-start;
+  gap: 10px;
   
 }
 
